# taskforge

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  test_auth.sh
backend/migrations/: 20251022172818_create_initial_schema.sql  20251022210206_create_organizations.sql  20251022221258_create_projects.sql  20251024044854_create_tasks.sql
backend/src/: main.rs
backend/src/api/: auth.rs  mod.rs  organizations.rs  projects.rs  tasks.rs
backend/src/config/: mod.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: mod.rs
backend/src/services/: mod.rs
backend/src/utils/: auth.rs  error.rs  mod.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
frontend/src/components/: auth_context.rs  mod.rs  organization_context.rs
frontend/src/pages/: dashboard.rs  dashboard_old.rs  home.rs  login.rs  mod.rs  not_found.rs  organization_detail.rs  organizations.rs  project_detail.rs  projects.rs
frontend/src/services/: api.rs  auth.rs  mod.rs  organizations.rs  projects.rs  tasks.rs
