[package]
name = "taskforge-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Leptos Framework
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

# HTTP Client
gloo-net = { version = "0.5", features = ["http"] }
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WebAssembly
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage"] }

# Error handling
thiserror = "1.0"

# Utilities
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
